src/test/NotAssigned/NotAssigned.expected
error: NotAssigned.panda:4:19: variable 'a' may not have been assigned
1 error
