src/test/NotAssigned/NotAssigned.panda
var a:Int
if false
    a := 5
Console.writeLine(a)